# shamcash

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: ShamCash-API-Docs.md
shamcash/: __init__.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_client_http.py  test_integration_live.py  test_models.py
